fix potential memleak in getJavaIDFromLangID after failing SetupI18nProps call [windows]

XMLWordPrintable

    • b14
    • generic
    • windows
    • Not verified

      Currently, the function getJavaIDFromLangID (located in windows java_props_md.c) only does proper deallocations after succesful call to function SetupI18nProps.
      However a failing call (SetupI18nProps returning false) might still need deallocations because SetupI18nProps can malloc memory in the failing case as well).

            Assignee:
            Matthias Baesken
            Reporter:
            Matthias Baesken
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: