8211149: fix potential memleak in getJavaIDFromLangID after failing SetupI18nProps call [windows]

Reviewed-by: naoto, lucy